home-assistant/ha-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant
  namespace: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant-label
  template:
    metadata:
      labels:
        app: homeassistant-label
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
      containers:
      - name: homeassistant
        image: 127.0.0.1:30500/home-assistant:2026.10-patched
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8123
        resources: {}
        volumeMounts:
          - name: etc-localtime
            mountPath: /etc/localtime
            readOnly: true
          - mountPath: /config
            name: homeassistant-pv-config
          - mountPath: /media
            name: homeassistant-pv-media
      restartPolicy: Always
      volumes:
        - name: etc-localtime
          hostPath:
            path: /usr/share/zoneinfo/Europe/London
        - name: homeassistant-pv-config
          persistentVolumeClaim:
            claimName: homeassistant-pvc-config
        - name: homeassistant-pv-media
          persistentVolumeClaim:
            claimName: homeassistant-pvc-media
status: {}
