home-assistant/webdav-service-ref.yaml
apiVersion: v1
kind: Service
metadata:
  name: webdav
  namespace: home-assistant
spec:
  type: ExternalName
  externalName: webdav.default.svc.cluster.local
  ports:
  - port: 6065
