home-assistant/ha-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant-ingress
  namespace: home-assistant # <--- This is your Home Assistant namespace
spec:
  ingressClassName: traefik
  rules:
  - host: home-assistant.k8s.ecafe.org
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: homeassistant-service
            port:
              number: 8123
